--- a/RemoteJoystickWeb/www/index.html
+++ b/RemoteJoystickWeb/www/index.html
@@ -6,6 +6,9 @@
         <title>Remote Joystick Client</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+        <meta http-equiv="pragma" content="no-cache">
+        <meta http-equiv="cache-control" content="no-cache">
+        <meta http-equiv="expires" content="0">   
         
         <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
         <script src="quaternion.min.js"></script> 
@@ -87,6 +90,7 @@
             
             #info{
                 color : rgba(0, 0, 0, 0.5);
+                text-shadow: 0 0 3px #fff, 0 0 3px #fff;
                 font-size : 6px;
             }
             #debug{
