--- a/RemoteJoystickWeb/www/index.html
+++ b/RemoteJoystickWeb/www/index.html
@@ -68,6 +68,7 @@
                 border: 2px #888 solid;
                 width : 100%;
                 height : 100%;
+                font-size : 20px;
                 background-color : #eee;
                 box-sizing : border-box;
                 overflow : hidden;
@@ -86,6 +87,17 @@
                 padding : 10px;
                 box-sizing : border-box;
                 pointer-events : none;
+            }
+            
+            .r90{
+                position : fixed;
+                transform:rotate(90deg);
+                -ms-transform:rotate(90deg); 	/* IE 9 */
+                -moz-transform:rotate(90deg); 	/* Firefox */
+                -webkit-transform:rotate(90deg); /* Safari ºÍ Chrome */
+                -o-transform:rotate(90deg); 	/* Opera */
+                -webkit-transform-origin: 50% 50%;
+                transform-origin: 50% 50%;
             }
             
             #info{
