--- a/RemoteJoystickWeb/www/index.html
+++ b/RemoteJoystickWeb/www/index.html
@@ -64,12 +64,16 @@
                 pointer-events : none;
             }
             #frame button{
+                position : absolute;
+                background-color : #eee;
                 border-radius : 5%;
                 border: 2px #888 solid;
                 width : 100%;
                 height : 100%;
-                font-size : 20px;
-                background-color : #eee;
+                left : 0;
+                top : 0;
+                padding : 0;
+                font-size : 18px;
                 box-sizing : border-box;
                 overflow : hidden;
             }
@@ -90,7 +94,7 @@
             }
             
             .r90{
-                position : fixed;
+                position : absolute;
                 transform:rotate(90deg);
                 -ms-transform:rotate(90deg); 	/* IE 9 */
                 -moz-transform:rotate(90deg); 	/* Firefox */
