remove pointer event

--- a/RemoteJoystickWeb/www/index.html
+++ b/RemoteJoystickWeb/www/index.html
@@ -80,6 +80,9 @@
             #frame button.pressed{
                 background-color : #beb;
             }
+            #frame button span{
+                pointer-events : none;
+            }
             
             #fg{
                 top : 0px;
