--- a/RemoteJoystickWeb/www/index.html
+++ b/RemoteJoystickWeb/www/index.html
@@ -14,9 +14,13 @@
         <script src="quaternion.min.js"></script> 
         
         <style>
-            body{
+            *{
                 margin : 0;
                 padding : 0;
+            }
+            
+            body{
+                border-width : 0;
                 touch-action : none;
                 -webkit-touch-callout : none;
                 -webkit-user-select : none;
